# prismatic-vlms

./: .gitignore  NOTES.md  README_densenet_variant.md  README_rocm.md  VISION_LNS_IMPLEMENTATION_DETAILS.md  analysis_output.txt  analyze_activations.sh  analyze_clip.ipynb  analyze_cnn_atomic_box_metrics copy.py  analyze_cnn_atomic_box_metrics_no_grad.py  analyze_cnn_layerwise_boxplots.py  analyze_cnn_whisker_box.py  analyze_custom_resnet_densenet.py  analyze_laplace_resnet14.py  analyze_layerwise_activations.py  analyze_layerwise_boxplots.py  analyze_nlp_encoder_layerwise_boxplots.py  analyze_vit_layerwise_activations.py  analyze_vit_layerwise_boxplots.py  bn_gain_stats.json  bn_stats.json  check_embedding_shape.txt  check_versions.txt  compare_checkpoints.ipynb  compare_weights.py  continual.sh  create_cl.py  create_reproduction_llava_validation_sets.sh  current_runs copy.txt  current_runs.txt  debug_load.ipynb  delete_checkpoints.sh  down.sh  env.txt  eval_env.yml  instruct_comparison.ipynb  log_analaysis.txt  lora_ranks.ipynb  main_figure.ipynb  nlp_eval.sh  (+39 more)
activation_analysis/: analyze_cnn_atomic_box_metrics.py  analyze_cnn_whisker_box.py  analyze_cnn_whisker_box_metrics.py  analyze_laplace_resnet14.py  analyze_layerwise_boxplots.py  analyze_nlp_encoder_layerwise_boxplots.py  analyze_vit_layerwise_activations.py  analyze_vit_layerwise_boxplots.py  analyzing_variance.ipynb  bn_param_snapshot.py  bn_param_snapshot_gain.py  compare_activations_chris.py  debug_densenet_layers.py  train_and_analyze_resnet18_vs_plain18.py  train_and_analyze_resnet18_vs_plain18_v3.py  train_and_analyze_resnet18_vs_plain18_v4.py  train_and_analyze_resnet18_vs_plain18_v5.py
exec/: pretrain.sh
notebooks/: cl_results_task_by_task.ipynb  forgetting_table_by_scale.ipynb  instruction_tuning_analysis.ipynb  lora_ranks.ipynb  main_figure.ipynb  parse_all_vicuna_cl.ipynb  parse_pythia copy.ipynb  parse_pythia_additional_experiments.ipynb  parse_pythia_cl.ipynb  parse_viz_deltas.ipynb  playground.ipynb  projector_weights.ipynb  soft_targets.ipynb  task_ordering.ipynb  viz_avg_scaling_graph_cl.ipynb  viz_forgetting_only.ipynb  viz_last_task_scaling_graph_cl.ipynb  viz_scaling_graph.ipynb
prismatic/: parse_all_others.ipynb
prismatic/conf/: datasets.py  models.py
prismatic/models/: load.py  materialize.py  registry.py
prismatic/models/llama_custom/: __init__.py  modeling_llama_advanced.py  modeling_llama_lns.py  modeling_llama_vision_lns.py
prismatic/overwatch/: overwatch.py
prismatic/preprocessing/: materialize.py  validation.py
prismatic/training/: materialize.py  metrics.py
prismatic/util/: adopt.py  batching_utils.py  data_utils.py  infinite_schedule.py  lora_utils.py  nn_utils.py  relora.py  torch_utils.py
scripts/: create_validation_sets.py  generate.py  pretrain.py  test_validation_pipeline.py
(+25 files in other folders)
